	- Remove unnecessary check for C++ from configure[.in].
	- Don't include DESTDIR when building inc_deps and lib_deps.
	  [886988]
	- Properly parse Maildir and mbox delivery lines in .qmail files
	  in vdelivermail (and exit(111) for mbox lines). [889756]
	- Temporarily disable -s option to vadduser (since it's broken).
	  [895375]

5.4.1 - released 10-Feb-04

	Tom Collins
	- Add dotqmail2valias program for converting .qmail-alias files
	  to valias table entries.

5.4.0 - released 1-Feb-04

	Tom Collins
	- Update configure with correct location of vlimits.default.
	- Fix typo (ammount) in vmoddomlimits. [882884]
	- Don't include $(DESTDIR) when building vpopmailbindir. [884247]
	- Mention compatability issues with older SMTP AUTH patches. 
	  [882351]

5.4.0-rc2 - released 19-Jan-04

	Michael Bowe
	- Added some basic 5.4 upgrade notes to the UGPRADE file
	- Fix typo's in configure.in that relate to the errors generated
	  when a discontinued configure option is used
	- Fix bug when autocreating a user dir for a user who exists
	  in the auth backend, but does not yet have a user dir 
	  allocated. [873007] 
	- Fix bug introduced in vpopmail-5.4.0-pre2 that was preventing
	  ~vpopmail/etc/vpopmail.mysql from being installed [874776]
	- vpopbull was failing to create userdirs in some cases
	  (when the user exists in the auth backend, but did not have
	  a dir allocated yet) [816942]
	- clearopensmtp was using USE_MYSQL rather than USE_SQL to 
	  determine where the roaming IPs were being stored [876016]
	- Update INSTALL and other guides to mention that vchkpw group
	  does not need to be gid 89. [877154]
	- Update README.pgsql to include security warning regarding
	  the postgres username/password [879124]

	Ken Nonaka
	- Fixes to vpgsql.c to clear compile errors when 
	  --enable-ip-alias-domains is enabled. [874066] 

	Tom Collins
	- Check for comments earlier in deliver_mail().
	- Remove unused --enable-defaultquota and code related to it.