@@ -61,6 +61,8 @@ vpopmail/configure.in -text
 vpopmail/contrib/adduser.mysql -text
 vpopmail/contrib/addusers.pl -text
 vpopmail/contrib/cdb_clearpass.sh -text
+vpopmail/contrib/checkpassword_debug.README -text
+vpopmail/contrib/checkpassword_debug.c -text
 vpopmail/contrib/cistron_radius.README -text
 vpopmail/contrib/cistron_radius.tar.gz -text svneol=unset#unset
 vpopmail/contrib/popfetch-1.0.tar.gz -text svneol=unset#unset
