@@ -1,0 +1,43 @@
+checkpassword_debug is a small tool to aid in the debugging of checkpassword
+like tools. checkpassword_debug will try to call a checkpassword tool, and as
+argument give itself.
+
+checkpassword_debug [-h] [-v] [-u user] [-g group] [-l login] [-p password]
+  [-d] [-c checkpassword] [-R ip ] [-L port] [-C]
+
+-h           displays short help text
+-v           increases the verbosity (can be used multiple times)
+-u user      switch to user before executing checkpassword
+-g group     switct to group before executing checkpassword
+-l login     give login to checkpassword as username
+-p password  give password to checkpassword as password
+-d           do not exit - useful for debugging checkpassword
+-c checkpwd  uses checkpwd as checkpassword tool
+-R ip        give ip to checkpassword as remote ip
+-L port      give port to checkpassword as the local port
+-C           (used internally for marking callbacks!)
+
+checkpassword_debug can be used in many different ways, but primary two setups:
+
+1. shell -> checkpassword_debug -> checkpassword (->) checkpassword_debug
+2. telnet -> tcpserver -> checkpassword -> checkpassword_debug
+
+
+Examples for setup 1:
+
+# checkpassword_debug -l test@example.com -p TESTPW -u 89 -g 89
+
+$ checkpassword_debug -l test@example.com
+
+# checkpassword_debug -v -c /usr/src/vpopdev/vchkpw -l test@example.com
+
+# checkpassword_debug -c /bin/checkpassword -l normaluser
+
+
+Example for setup 2:
+
+$ tcpserver 0.0.0.0 1100 qmail-popup host.na.me vchkpw checkpassword_debug -C
+
+- and telnet to port 1100.
+
+Enjoy!
